Bug 1181577 Delay creation of QuotaInitRunnable until Cache Context actually started. r=ehsan